# wordle_yvaniak

./: Cargo.toml  flake.nix
src/: gen_words.rs
tests/: cmd.rs
